# appium-robot-tedTalks

./: .gitignore  README.md  base.resource  pyproject.toml
resource/locators/: homeLocators.yml  interestLocators.yml
resource/pages/: homePage.resource  interestPage.resource  lookingForPage.resource  signInPage.resource  welcomePage.resource
resource/utils/: customKeywords.resource  openApp.resource
tests/: TED.robot
