[project]
name = "robot-appium"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Vilela",email = "dvilelaportela@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "robotframework (>=7.2,<8.0)",
    "robotframework-appiumlibrary (>=2.1.0,<3.0.0)",
    "docutils (>=0.21.2,<0.22.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
